# livreur

./: CHANGELOG.md  Cargo.toml  README.md  brel.toml  lefthook.yml  mise.toml
src/: archive.rs  assets.rs  checksum.rs  config.rs  init.rs  lib.rs  main.rs  release_notes.rs  workflow.rs
src/commands/: build.rs  init.rs  mod.rs  publish.rs  template.rs  validate.rs
src/forge/: github.rs  mod.rs
templates/: cargo-publish.yml.tera  github-release.md.tera  github-release.yml.hbs  release.yml.tera
tests/: build_cli.rs  init_cli.rs  publish_cli.rs  template_cli.rs  validate_cli.rs
