[package]
name = "livreur"
version = "0.0.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tera = "=2.0.0"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
