[package]
name = "livreur"
version = "0.1.0"
edition = "2024"
description = "package and ship your rust binaries to brew,npm and more"
license = "MIT"
repository = "https://github.com/getlivreur/livreur"
readme = "README.md"


[dependencies]
cargo_metadata = "0.23"
clap = { version = "4.6", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
flate2 = "1"
tar = "0.4"
tera = "=2.0.0"
toml = "1.1"
toml_edit = "0.22"
zip = { version = "8", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
